--- a/Frontend/styles/project.css
+++ b/Frontend/styles/project.css
@@ -111,29 +111,28 @@ body{
 }
 hr{
     color: #DEE2E6;
+    margin-bottom: 20px;
 }
 
 /* Table */
-#table {
+.table {
     display: flex;
     height: 50px;
     align-items: center;
     margin-top: 30px;
 }
-#table > div:nth-child(1){
+.table > div:nth-child(1){
     width: 335px;
 }
-#table > div:nth-child(2){
+.table > div:nth-child(2){
     width: 177.5px;
     margin-right: 30px;
 }
-#table > div:nth-child(3), #table > div:nth-child(4), #table > div:nth-child(5){
+.table > div:nth-child(3), .table > div:nth-child(4), .table > div:nth-child(5){
     width: 200px;
     margin-right: 70px;
 }
-#table > div:nth-child(6){
-    width: 140px;
-}
+
 .time-data{
     display: flex;
     flex-direction: column;
@@ -151,4 +150,47 @@ hr{
     line-height: 22px;
     color: #687481;
     font-family: sans-serif;
+}
+.card{
+    display: flex;
+}
+#data-container > .card{
+    color: #6A6A6A;
+    margin-top: 0px;
+    padding: 0px 10px;
+}
+.card:hover{
+    cursor: pointer;
+    background-color: #EAF3F9;
+    border-radius: 7px;
+}
+.card > div{
+    font-weight: 400;
+    font-size: 15px;
+}
+.action{
+    display: flex;
+}
+.edit,.delete{
+    color: #ffff;
+    font-weight: 500;
+    padding: 6px;
+    border-radius: 5px;
+    background-color: #69F0AE;
+    margin-right: 8px;
+}
+.edit:hover{
+    background-color: #39dd8e;
+}
+.delete{
+    background-color: #FF8A80;
+    margin-right: 0px;
+}
+.delete:hover{
+    background-color: #f57165;
+}
+#no-project{
+    color: #687481;
+    font-weight: 500;
+    text-align: center;
 }
