--- a/Frontend/styles/dashboard.css
+++ b/Frontend/styles/dashboard.css
@@ -118,7 +118,6 @@ body{
 #left-arrow:hover, #right-arrow:hover,#calendar-data:hover, #user2:hover{
     cursor: pointer;
     background-color: #DCEEFA;
-    /* background-clip: padding-box; */
 }
 
 /* Table */
@@ -142,6 +141,7 @@ body{
 .time-data{
     display: flex;
     flex-direction: column;
+    padding: 0px 5px;
 }
 .date{
     color: #949494;
@@ -159,9 +159,8 @@ body{
 }
 /* Table data */
 table{
-    border-bottom: 1px solid #DEE2E6;
-    margin-top: 30px;
-    
+    border-top: 1px solid #DEE2E6;
+    margin-top: 20px;
 }
 #table-data .first-col{
     width: 315px;
@@ -180,12 +179,10 @@ table input, #member-box input, #project-outer-box input{
     font-size: 15px;
     color: #333333;
     border-radius: 5px;
-    margin-bottom: 10px;
-    margin-right: 5px;
 }
 table input:focus, #member-box input:focus, #project-outer-box input:focus{
     outline: none;
-    border: 2px solid #49c3db;
+    border: 1.5px solid #49c3db;
 }
 .total{
     width: 10%;
@@ -231,10 +228,27 @@ table input:focus, #member-box input:focus, #project-outer-box input:focus{
     cursor: pointer;
     background-color: #F8F9FA;
 }
-
-/* Project box */
 #project-outer-box{
-    /* top: 370px; */
     right: 935px;
     visibility: hidden;
+}
+td{
+   padding: 9px 5.5px; 
+}
+tr{
+    box-shadow: 0px 1px 0px 0px #DEE2E6;
+}
+tr:hover{
+    background-color: #F9FAFB;
+}
+#project-search, #search-member{
+    margin-bottom: 9px;
+}
+#add{
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #4A97C6;
+}
+#add:hover{
+    cursor: pointer;
 }
