--- a/Frontend/styles/index.css
+++ b/Frontend/styles/index.css
@@ -403,3 +403,53 @@ footer>div:nth-child(2) {
 	line-height: 25px;
 	text-decoration: none solid rgb(55, 93, 117);
 }
+
+@media all and (min-width:320px) and (max-width:900px){
+  *{
+    margin: 0px;
+    padding: 0px;
+  }
+  .media{
+    display: none;
+  }
+  nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  #media-div{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  #top-section{
+    display: none;
+  }
+  #image1{
+    width: 80%;
+    height: 80%;
+  }
+  .started{
+    width: 40%;
+    margin: auto;
+  }
+  .mid-section{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    /* justify-content: center; */
+    width: 100%;
+  }
+  .mid-section img{
+    width: 100%;
+    height: 100%;
+  }
+  footer > div:nth-child(1){
+    display: none;
+  }
+  footer > div:nth-child(2){
+    display: flex;
+    flex-direction: column;
+  }
+}
