--- a/Frontend/styles/loginPage.css
+++ b/Frontend/styles/loginPage.css
@@ -329,3 +329,29 @@ form > div > div{
     cursor: pointer;
     background-color: none;
 }
+
+@media all and (min-width:320px) and (max-width:900px){
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+    #logo{
+        display: none;
+    }
+    .media{
+      display: none;
+    }
+    nav {
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+    #media-div{
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+    #child2{
+        width: 90%;
+    }
+}
