--- a/Frontend/styles/project.css
+++ b/Frontend/styles/project.css
@@ -194,3 +194,41 @@ hr{
     font-weight: 500;
     text-align: center;
 }
+
+@media all and (min-width:320px) and (max-width:900px){
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+    #child{
+        margin: 0px;
+        padding: 5px;
+    }
+    #side-panel{
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    #logo img{
+        display: none;
+        width: 0px;
+        height: 0px;
+    }
+    #logo{
+        width: 0px;
+        height: 0px;
+    }
+    #main-body{
+        width: 100%;
+        margin: 20px 0px 0px 0px;
+        padding: 0px;
+    }
+    .time{
+        margin: 0px;
+        padding: 0px;
+    }
+    #data-container > div{
+        margin: 0px;
+        padding: 0px;
+    }
+}
