--- a/Frontend/styles/projectDesc.css
+++ b/Frontend/styles/projectDesc.css
@@ -220,3 +220,43 @@ hr{
     color: #4F4F4F;
     margin-top: 10px;
 }
+
+@media all and (min-width:500px) and (max-width:900px){
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+    #child{
+        margin: 0px;
+        padding: 5px;
+        margin: auto;
+        width: 90%;
+    }
+    #side-panel{
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    #logo img{
+        display: none;
+        width: 0px;
+        height: 0px;
+    }
+    #logo{
+        width: 0px;
+        height: 0px;
+    }
+    #main-body{
+        width: 100%;
+        margin: 20px 0px 0px 0px;
+        padding: 0px;
+    }
+    #main{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        height: 950px;
+    }
+}
