--- a/Frontend/styles/registerPage.css
+++ b/Frontend/styles/registerPage.css
@@ -331,7 +331,28 @@ form > div > div{
 
 }
 
-/* Testing */
-body {
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
-  }
+@media all and (min-width:320px) and (max-width:900px){
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+    #logo{
+        display: none;
+    }
+    .media{
+      display: none;
+    }
+    nav {
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+    #media-div{
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+    #child2{
+        width: 90%;
+    }
+}
